# Valida-o-de-Cluster

./: README.md  pyproject.toml  requirements.txt
pd/: Andre_Validacao-de-modelos-de-clusterizacao_pd.ipynb
