[tool.poetry]
name = "pd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
seaborn = "^0.12.1"
sklearn = "^0.0.post1"
jupyter = "^1.0.0"
scikit-learn = "^1.2.0"
yellowbrick = "^1.5"
dbcv = {git = "https://github.com/christopherjenness/DBCV.git", rev = "master"}
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
